# 2022_lstm_attention_simulation

./: .gitignore  README.md  main.py  pyproject.toml
src/: attention_drawer.py  dataloader.py  model.py  train.py
